Bug 65557 - ICE: SIGSEGV in hash_table<>::find_slot_with_hash() with -fdevirtualize -fipa-cp -fipa-icf-functions
Summary: ICE: SIGSEGV in hash_table<>::find_slot_with_hash() with -fdevirtualize -fipa...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: ipa (show other bugs)
Version: 5.0
: P3 normal
Target Milestone: ---
Assignee: Martin Liška
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2015-03-25 16:31 UTC by Zdenek Sojka
Modified: 2015-04-01 08:37 UTC (History)
0 users

See Also:
Host: x86_64-pc-linux-gnu
Target: x86_64-pc-linux-gnu
Build:
Known to work:
Known to fail: 5.0
Last reconfirmed:


Attachments
reduced testcase (55 bytes, text/x-csrc)
2015-03-25 16:31 UTC, Zdenek Sojka
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Zdenek Sojka 2015-03-25 16:31:38 UTC
Created attachment 35138 [details]
reduced testcase

Compiler output:
$ gcc -fdevirtualize -fipa-cp -fipa-icf-functions testcase.C 
testcase.C:16:6: internal compiler error: Segmentation fault
 S1 s1;
      ^
0xe0a5cf crash_signal
        /mnt/svn/gcc-trunk/gcc/toplev.c:383
0xc123e2 hash_table<hash_map<int, ipa_node_params*, function_summary<ipa_node_params*>::summary_hashmap_traits>::hash_entry, xcallocator, true>::find_slot_with_hash(int const&, unsigned int, insert_option)
        /mnt/svn/gcc-trunk/gcc/hash-table.h:1542
0xc12591 hash_map<int, ipa_node_params*, function_summary<ipa_node_params*>::summary_hashmap_traits>::get_or_insert(int const&, bool*)
        /mnt/svn/gcc-trunk/gcc/hash-map.h:232
0xc12591 function_summary<ipa_node_params*>::get(int)
        /mnt/svn/gcc-trunk/gcc/symbol-summary.h:230
0x18605de function_summary<ipa_node_params*>::get(cgraph_node*)
        /mnt/svn/gcc-trunk/gcc/symbol-summary.h:112
0x18605de ipa_icf::sem_function::equals_wpa(ipa_icf::sem_item*, hash_map<symtab_node*, ipa_icf::sem_item*, default_hashmap_traits>&)
        /mnt/svn/gcc-trunk/gcc/ipa-icf.c:518
0x18581ca ipa_icf::sem_item_optimizer::subdivide_classes_by_equality(bool)
        /mnt/svn/gcc-trunk/gcc/ipa-icf.c:2518
0x185fb7a ipa_icf::sem_item_optimizer::execute()
        /mnt/svn/gcc-trunk/gcc/ipa-icf.c:2296
0x18624a6 ipa_icf_driver
        /mnt/svn/gcc-trunk/gcc/ipa-icf.c:3172
0x18624a6 ipa_icf::pass_ipa_icf::execute(function*)
        /mnt/svn/gcc-trunk/gcc/ipa-icf.c:3219
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <http://gcc.gnu.org/bugs.html> for instructions.

Tested revisions:
r221607 - ICE
Comment 1 Martin Liška 2015-03-31 16:07:10 UTC
Fixed in 5.0.0.
Comment 2 Martin Liška 2015-04-01 08:37:37 UTC
Fixed.